--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
   </div>
 
   <div class="six">
-    <div class="y">Голова бестолкова</div>
+    <div class="y">Голова безтолкова</div>
     <p>Київ 2025</p>
   </div>
 </body>
 </html>
+
 
 
 
